Update translations dictionary

--- a/pozo/locale/pozo.pot
+++ b/pozo/locale/pozo.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-21 17:43+0000\n"
+"POT-Creation-Date: 2024-05-21 18:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -131,6 +131,59 @@ msgid ""
 "sanitizing on your las files.\n"
 msgstr ""
 
+#: pozo/drawable.py:64
+msgid ""
+"method latest_version: returns the latest version for versioned properties\n"
+"Returns:\n"
+"    The index of the latest version"
+msgstr ""
+
+#: pozo/drawable.py:71
+msgid ""
+"method new_version: creates a new version at end of version list (new latest "
+"version)\n"
+"\n"
+"Whether or not the new version points to anything depends on the following:\n"
+"\n"
+"Args:\n"
+"    copy (boolean): if True, new_version is created with a .copy() of the "
+"old version (default False)\n"
+"    deep (boolean) if True, new_version is created with a deep_copy() of the "
+"old version (default True)"
+msgstr ""
+
+#: pozo/drawable.py:84
+msgid ""
+"method insert_version: creates a new version after currently selected "
+"version\n"
+"\n"
+"Whether or not the new version points to anything depends on the following:\n"
+"\n"
+"Args:\n"
+"    copy (boolean): if True, new_version is created with a .copy() of the "
+"old version (default False)\n"
+"    deep (boolean) if True, new_version is created with a deep_copy() of the "
+"old version (default True)"
+msgstr ""
+
+#: pozo/drawable.py:97
+msgid ""
+"method remove_version: removes either the current version or specified "
+"version\n"
+"\n"
+"Args:\n"
+"    version (None or number): Specify the version to be removed or leave "
+"empty to remove current version"
+msgstr ""
+
+#: pozo/drawable.py:112
+msgid ""
+"method get_version_dict: returns a dict struct of all versions and their "
+"properties (internal names)\n"
+"Returns:\n"
+"    dictionary of versions and properties"
+msgstr ""
+
 #: pozo/traces.py:9
 msgid ""
 "class Trace: contains one drawable data array\n"
@@ -144,7 +197,8 @@ msgid ""
 "Data and its unit are versioned properties. That is, if you want to change "
 "the data without losing the original, you can use the functions as they are "
 "described below (new_version() etc). You can set the version with `mytrace."
-"version =`. The depth and its unit are expected to be constants.\n"
+"version =`. The depth and its unit are not versioned, only data and unit. It "
+"always starts at .version == 0.\n"
 "\n"
 "Pozo attempts to be agnostic towards array type: series, nparrays, polars, "
 "pandas, lists are all accepted. pint.Quantity wrappers are often accepted as "
