--- a/pozo/locale/es/LC_MESSAGES/pozo.po
+++ b/pozo/locale/es/LC_MESSAGES/pozo.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-21 17:43+0000\n"
-"PO-Revision-Date: 2024-05-21 18:44-0400\n"
+"POT-Creation-Date: 2024-05-21 22:42+0000\n"
+"PO-Revision-Date: 2024-05-21 18:59-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -182,7 +182,93 @@ msgstr ""
 "                pozo.units.check_las()  - Imprimir un análisis basico para "
 "ayudar a lavar los archivos de las.\n"
 
+#: pozo/drawable.py:65
+msgid ""
+"method latest_version: returns the latest version for versioned properties\n"
+"Returns:\n"
+"    The index of the latest version"
+msgstr ""
+
+#: pozo/drawable.py:71
+msgid ""
+"method new_version: creates a new version at end of version list (new latest "
+"version)\n"
+"\n"
+"Whether or not the new version points to anything depends on the following:\n"
+"\n"
+"Args:\n"
+"    copy (boolean): if True, new_version is created with a .copy() of the "
+"old version (default False)\n"
+"    deep (boolean) if True, new_version is created with a deep_copy() of the "
+"old version (default True)"
+msgstr ""
+
+#: pozo/drawable.py:84
+msgid ""
+"method insert_version: creates a new version after currently selected "
+"version\n"
+"\n"
+"Whether or not the new version points to anything depends on the following:\n"
+"\n"
+"Args:\n"
+"    copy (boolean): if True, new_version is created with a .copy() of the "
+"old version (default False)\n"
+"    deep (boolean) if True, new_version is created with a deep_copy() of the "
+"old version (default True)"
+msgstr ""
+
+#: pozo/drawable.py:97
+msgid ""
+"method remove_version: removes either the current version or specified "
+"version\n"
+"\n"
+"Args:\n"
+"    version (None or number): Specify the version to be removed or leave "
+"empty to remove current version"
+msgstr ""
+
+#: pozo/drawable.py:112
+msgid ""
+"method get_version_dict: returns a dict struct of all versions and their "
+"properties (internal names)\n"
+"Returns:\n"
+"    dictionary of versions and properties"
+msgstr ""
+
 #: pozo/traces.py:9
+#, fuzzy
+#| msgid ""
+#| "class Trace: contains one drawable data array\n"
+#| "\n"
+#| "Trace is a unit-aware pointer for a data and depth array. It also stores "
+#| "a mnemonic (name). It is not supposed to store data, but point to the "
+#| "data and then render that data into a graph later using the depth as the "
+#| "Y-axis. Depth and data must be the same shape at all times, they can be "
+#| "replaced together.\n"
+#| "\n"
+#| "Data and its unit are versioned properties. That is, if you want to "
+#| "change the data without losing the original, you can use the functions as "
+#| "they are described below (new_version() etc). You can set the version "
+#| "with `mytrace.version =`. The depth and its unit are expected to be "
+#| "constants.\n"
+#| "\n"
+#| "Pozo attempts to be agnostic towards array type: series, nparrays, "
+#| "polars, pandas, lists are all accepted. pint.Quantity wrappers are often "
+#| "accepted as well.\n"
+#| "\n"
+#| "***** Constructor: pozo.Trace(...)\n"
+#| "Args:\n"
+#| "    data (array): most types of arrays are accepted, including one "
+#| "wrapped in pint.Quantity\n"
+#| "    **kwargs:\n"
+#| "        mnemonic (str): REQUIRED: the name/mnemonic of the trace\n"
+#| "        name (str): synonym for mnemonic, don't include both\n"
+#| "        unit (str or pint.Unit): describes the data unit\n"
+#| "        depth (array): another array that must be the same size as data, "
+#| "can also be pint.Quantity\n"
+#| "        depth_unit (str or pint.Unit): describes the depth unit\n"
+#| "        original_data (any): A pointer to where the original data was "
+#| "extracted from, useful if planning to re-output to a LAS file\n"
 msgid ""
 "class Trace: contains one drawable data array\n"
 "\n"
@@ -195,7 +281,8 @@ msgid ""
 "Data and its unit are versioned properties. That is, if you want to change "
 "the data without losing the original, you can use the functions as they are "
 "described below (new_version() etc). You can set the version with `mytrace."
-"version =`. The depth and its unit are expected to be constants.\n"
+"version =`. The depth and its unit are not versioned, only data and unit. It "
+"always starts at .version == 0.\n"
 "\n"
 "Pozo attempts to be agnostic towards array type: series, nparrays, polars, "
 "pandas, lists are all accepted. pint.Quantity wrappers are often accepted as "
